adding a service worker

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <h1>20Rule</h1>
-    <div class="timer"></div>
+    <div class="timer">0:00</div>
     <button class="alertButton">Click her to alert</button>
 
-    <script src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
   </body>
 </html>
