Simple timer and chores

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div class="timer">0:00</div>
     <button class="alertButton">Click her to alert</button>
 
-    <script type="module" src="popup.js"></script>
+    <script type="module" src="./scripts/popup.js"></script>
   </body>
 </html>
