--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <title>20Rule</title>
   </head>
   <body>
-    <h1>20Rule</h1>
-    <div class="timer">0:00</div>
-    <button class="alertButton">Click her to alert</button>
+    <div class="container">
+      <h1>20Rule</h1>
+      <div class="timer">00:00</div>
+    </div>
+    <h2>Remind me every</h2>
+    <div class="values-container">
+      <div class="time-picker">10</div>
+      <div class="time-picker">15</div>
+      <div class="time-picker">20</div>
+    </div>
+    <div class="minutes">minutes</div>
 
     <script type="module" src="./scripts/popup.js"></script>
   </body>
