--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </div>
     <h2>Remind me every</h2>
     <div class="values-container">
-      <div class="time-picker">10</div>
-      <div class="time-picker">15</div>
-      <div class="time-picker">20</div>
+      <div class="time-picker time-picker-ten">10</div>
+      <div class="time-picker time-picker-fifteen">15</div>
+      <div class="time-picker time-picker-twinty">20</div>
     </div>
     <div class="minutes">minutes</div>
 
