--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="values-container">
       <div class="time-picker time-picker-ten">10</div>
       <div class="time-picker time-picker-fifteen">15</div>
-      <div class="time-picker time-picker-twinty">20</div>
+      <div class="time-picker time-picker-twenty">20</div>
     </div>
     <div class="minutes">minutes</div>
 
