Start and Pause Button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
       <h1>20Rule</h1>
       <div class="timer">00:00</div>
+      <button class="start-btn">Pause</button>
     </div>
     <h2>Remind me every</h2>
     <div class="values-container">
